<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_300sdp"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/_120sdp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ic_account_icon" />

            <TextView
                android:id="@+id/dw_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="top|center"
                android:text="@string/ac_info"
                android:textColor="#5F5F5F"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/name"
                style="@style/CustomEditText"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/name_guide"
                android:layoutDirection="rtl"
                android:maxLength="20"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="top|center"
                android:text="@string/ac_city"
                android:textColor="#5F5F5F"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/email"
                style="@style/CustomEditText"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/city_guide"
                android:layoutDirection="rtl"
                android:layout_marginBottom="@dimen/_5sdp"
                android:maxLength="20"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_send" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>