<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/row_padding"
    android:paddingRight="@dimen/activity_margin"
    android:paddingBottom="@dimen/row_padding">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="@dimen/thumbnail"
        android:layout_height="@dimen/thumbnail"
        android:layout_alignParentRight="true"

        android:layout_marginLeft="@dimen/row_padding"
        android:layout_marginRight="@dimen/_5sdp" />

    <LinearLayout
        android:id="@+id/ll_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/thumbnail"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/name_guide"
            android:textColor="@color/contact_name"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_1sdp"
            android:gravity="right"
            android:text="@string/num_track"
            android:textColor="@color/contact_number"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ll_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/comment_color"
            android:textSize="@dimen/_12sdp"
            android:text="@string/rat" />
        <com.lauzy.freedom.lyricview.Utils.SvgRatingBar
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:isIndicator="true"
            android:minHeight="25dp"
            android:numStars="5"
            android:progressDrawable="@drawable/selector_ratingbar"
            android:layout_marginLeft="@dimen/_5sdp"
            android:rating="4" />
    </LinearLayout>
</RelativeLayout>